# rlc_simulator

./: .gitignore  .gitmodules  CMakeLists.txt  sinus.py
app/: main.cpp  rlc.cpp  rlc.hpp  trigonometric.hpp
